--- a/style.css
+++ b/style.css
@@ -3,13 +3,47 @@
   padding: 0;
 }
 
-
 body {
-
   font-size: 1em;
-  font-family: "Trebuchet MS", Helvetica, sans-serif;
-background: #e6e6e6;
+  font-family: 'Trebuchet MS', Helvetica, sans-serif;
+  background: #e6e6e6;
 }
 
 /* Layout */
+#area-cabecalho {
+  background: #f7b600;
+  padding: 15px;
+  text-align: center;
+}
 
+#area-logo,
+#area-menu {
+  padding: 10px;
+}
+
+/* Formatação do menu */
+
+a:link, a:visited {
+color: #fff;
+padding: 8px 12px;
+}
+
+a:hover {
+  color: #f7b600;
+  background: white;
+  
+}
+
+a {
+  text-decoration: none;
+}
+/* Formatação em geral */
+
+h1 {
+  color: #4e4e4e;
+  font-size: 2.5rem;
+}
+
+.white {
+  color: white;
+}
