--- a/style.css
+++ b/style.css
@@ -21,17 +21,55 @@ body {
   padding: 10px;
 }
 
+#area-principal {
+  width: 920px;
+  margin: 0 auto;
+}
+
+#area-postagens,
+#area-lateral {
+  background: orange;
+}
+
+#area-postagens {
+  width: 660px;
+  float: left;
+}
+
+#area-lateral {
+  width: 240px;
+  float: right;
+}
+
+.postagem {
+
+  padding: 20px;
+  margin-bottom: 20px;
+  background: white;
+
+}
+
+img {
+  width: 620px;
+}
+
+#rodape {
+  background: #ccc;
+  clear: both;
+  text-align: center;
+  padding: 15px;
+}
 /* Formatação do menu */
 
-a:link, a:visited {
-color: #fff;
-padding: 8px 12px;
+a:link,
+a:visited {
+  color: #fff;
+  padding: 8px 12px;
 }
 
 a:hover {
   color: #f7b600;
   background: white;
-  
 }
 
 a {
