--- a/style.css
+++ b/style.css
@@ -24,12 +24,11 @@ body {
 #area-principal {
   width: 920px;
   margin: 0 auto;
+  padding: 15px;
 }
 
-#area-postagens,
-#area-lateral {
-  background: orange;
-}
+
+
 
 #area-postagens {
   width: 660px;
@@ -39,6 +38,7 @@ body {
 #area-lateral {
   width: 240px;
   float: right;
+  
 }
 
 .postagem {
@@ -49,9 +49,24 @@ body {
 
 }
 
+.conteudo-lateral {
+  background: white;
+  padding: 10px;
+  margin-bottom: 20px;
+
+}
+
 img {
   width: 620px;
 }
+
+.postagem-lateral {
+  font-size: 0.8rem;
+  padding: 5px;
+  
+}
+
+
 
 #rodape {
   background: #ccc;
@@ -61,13 +76,28 @@ img {
 }
 /* Formatação do menu */
 
+
 a:link,
+a:visited {
+  color: #f7b600
+
+}
+
+ a:hover {
+ text-decoration: underline;
+}
+
+
+
+#area-cabecalho
+a:link,
+#area-cabecalho
 a:visited {
   color: #fff;
   padding: 8px 12px;
 }
 
-a:hover {
+ #area-cabecalho a:hover {
   color: #f7b600;
   background: white;
 }
@@ -81,6 +111,27 @@ h1 {
   color: #4e4e4e;
   font-size: 2.5rem;
 }
+
+h2 {
+  color: #f7b600;
+}
+h3 {
+  color: #565656;
+  background: #ccc;
+  padding: 5px;
+
+
+}
+
+.data-postagem {
+  font-size: 0,8rem;
+  border-bottom: 1px solid #f4f4f4;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+  display: block;
+}
+
+
 
 .white {
   color: white;
